@@ -48,7 +48,9 @@
 ASM_NAME(dct36_3dnowext):
 	pushl	%ebp
 	movl	%esp, %ebp
-#if defined(PIC) && defined(__APPLE__)
+// Not entirely sure about this PIC_GLOBAL_PTR here, but this is highly
+// irrelevant, anyway. Anyone building 3DNow code for Android or Apple systems?
+#ifdef PIC_GLOBAL_PTR
 	sub		$4, %esp
 #endif
 	pushl	%esi
@@ -58,7 +60,7 @@ ASM_NAME(dct36_3dnowext):
 	#define _EBX_ %edi
 	PREPARE_GOT
 	GET_GOT
-#if defined(PIC) && defined(__APPLE__)
+#ifdef PIC_GLOBAL_PTR
 	#define _COS9_ 0(%edi)
 	#define _tfcos36_ 0(%eax)
 	mov GLOBAL_VAR_PTR(tfcos36), %eax
@@ -198,7 +200,7 @@ ASM_NAME(dct36_3dnowext):
 	movq %mm2,%mm4
 	pfadd %mm3,%mm4
 	movq %mm7,%mm5
-#if defined(PIC) && defined(__APPLE__)
+#ifdef PIC_GLOBAL_PTR
 	mov -4(%ebp),%eax
 #endif
 	punpckldq 0+_tfcos36_,%mm5
@@ -227,7 +229,7 @@ ASM_NAME(dct36_3dnowext):
 	pfsub %mm2,%mm4
 	movq %mm7,%mm5
 	punpckldq 32+_tfcos36_,%mm5
-#if defined(PIC) && defined(__APPLE__)
+#ifdef PIC_GLOBAL_PTR
 	mov 8(%ebp),%eax
 #endif
 	pfmul %mm5,%mm4
@@ -275,7 +277,7 @@ ASM_NAME(dct36_3dnowext):
 	movq %mm2,%mm4
 	pfadd %mm3,%mm4
 	movq %mm7,%mm5
-#if defined(PIC) && defined(__APPLE__)
+#ifdef PIC_GLOBAL_PTR
 	mov -4(%ebp),%eax
 #endif
 	punpckldq 4+_tfcos36_,%mm5
@@ -305,7 +307,7 @@ ASM_NAME(dct36_3dnowext):
 	pfsub %mm2,%mm4
 	movq %mm7,%mm5
 	punpckldq 28+_tfcos36_,%mm5
-#if defined(PIC) && defined(__APPLE__)
+#ifdef PIC_GLOBAL_PTR
 	mov 8(%ebp),%eax
 #endif
 	pfmul %mm5,%mm4
@@ -365,7 +367,7 @@ ASM_NAME(dct36_3dnowext):
 	movq %mm2,%mm4
 	pfadd %mm3,%mm4
 	movq %mm7,%mm5
-#if defined(PIC) && defined(__APPLE__)
+#ifdef PIC_GLOBAL_PTR
 	mov -4(%ebp),%eax
 #endif
 	punpckldq 8+_tfcos36_,%mm5
@@ -395,7 +397,7 @@ ASM_NAME(dct36_3dnowext):
 	pfsub %mm2,%mm4
 	movq %mm7,%mm5
 	punpckldq 24+_tfcos36_,%mm5
-#if defined(PIC) && defined(__APPLE__)
+#ifdef PIC_GLOBAL_PTR
 	mov 8(%ebp),%eax
 #endif
 	pfmul %mm5,%mm4
@@ -455,7 +457,7 @@ ASM_NAME(dct36_3dnowext):
 	movq %mm2,%mm4
 	pfadd %mm3,%mm4
 	movq %mm7,%mm5
-#if defined(PIC) && defined(__APPLE__)
+#ifdef PIC_GLOBAL_PTR
 	mov -4(%ebp),%eax
 #endif
 	punpckldq 12+_tfcos36_,%mm5
@@ -485,7 +487,7 @@ ASM_NAME(dct36_3dnowext):
 	pfsub %mm2,%mm4
 	movq %mm7,%mm5
 	punpckldq 20+_tfcos36_,%mm5
-#if defined(PIC) && defined(__APPLE__)
+#ifdef PIC_GLOBAL_PTR
 	mov 8(%ebp),%eax
 #endif
 	pfmul %mm5,%mm4
@@ -520,7 +522,7 @@ ASM_NAME(dct36_3dnowext):
 	movq 64(%eax),%mm3
 	pfadd %mm3,%mm4
 	movq %mm7,%mm5
-#if defined(PIC) && defined(__APPLE__)
+#ifdef PIC_GLOBAL_PTR
 	mov -4(%ebp),%eax
 #endif
 	punpckldq 16+_tfcos36_,%mm5
